# vatix-contract

./: .gitignore  CLOSE_MARKET_FEATURE.md  COMPLETE_ISSUE_368.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  ISSUE_368_PR_DESCRIPTION.md  ISSUE_368_SUMMARY.md  LICENSE  MARKET_METADATA_URI_FEATURE.md  MARKET_METADATA_URI_IMPLEMENTATION.md  README.md  WIRE_COLLECT_FEE_CALLBACK_SPEC.md  package.json  pnpm-lock.yaml  verify-events.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/web/: .env.example  .env.local.example  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DarkModeErrorBoundary.tsx  DepositForm.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingSkeleton.tsx  MarketCard.tsx  Navbar.tsx  PositionPanel.tsx  PriceBar.test.tsx  PriceBar.tsx  StatusBadge.tsx  TxResult.tsx  WalletConnectButton.tsx  WithdrawForm.tsx
apps/web/context/: WalletContext.tsx
apps/web/lib/: contract-client.ts  market-helpers.ts  markets.ts  responsive.ts  soroban.ts  withdrawHelpers.ts
contracts/market/: Cargo.toml  EVENTS.md  MIGRATION.md  Makefile  STORAGE_MIGRATION_GUIDE.md  rustfmt.toml
contracts/market/src/: deposit.rs  error.rs  events.rs  events_test.rs  examples.rs  lib.rs  oracle.rs  oracle_adapter.rs  positions.rs  settlement.rs  storage.rs  test.rs  types.rs  validation.rs  withdraw.rs  withdraw_fuzz.rs
contracts/market/test_snapshots/positions/tests/: test_update_position_new_user.1.json
contracts/market/test_snapshots/storage/test/: test_admin_storage.1.json  test_market_id_counter.1.json  test_market_storage.1.json  test_position_storage.1.json
contracts/market/test_snapshots/test/tests/: test_initialize_market_invalid_end_time.1.json  test_initialize_market_multiple.1.json  test_initialize_market_success.1.json  test_initialize_market_unauthorized.1.json  test_update_position_existing_user.1.json  test_update_position_smoke.1.json
contracts/outcome-token/: Cargo.toml
contracts/outcome-token/src/: error.rs  events.rs  lib.rs  storage.rs  (+2 more)
contracts/resolution/: Cargo.toml
contracts/treasury/: Cargo.toml
docs/: adr-001-oracle-adapter.md  cross-contract-call-graph.md  freighter-integration-guide.md
docs/adr/: 001-oracle-adapter-selection.md  README.md
scripts/: deploy-testnet.sh  deploy.sh  generate-bindings.ts  generate-issues.ts  invoke-example.sh  verify-wasm-hash.sh
scripts/issues/: README.md
shared/src/: lib.rs
src/: lib.rs
test-vectors/: oracle-message.json
tests/: client_entrypoints_test.rs  close_market_test.rs  collateral_invariant_test.rs  event_snapshot_test.rs  market_test.rs  positions_test.rs  proptest_locked_invariant.rs  resolution_flow_test.rs  settlement_test.rs  treasury_integration_test.rs  withdraw_treasury_test.rs
tests/helpers/: mod.rs
(+18 files in other folders)
